--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/en.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/en.VirtoCommerce.Quote.json
@@ -117,8 +117,8 @@
         "message": "The quote has been modified. Do you want to save changes?"
       },
       "quote-cancel": {
-        "title": "Remove quote",
-        "message": "Are you sure you want to delete this quote?",
+        "title": "Cancel quote",
+        "message": "Are you sure you want to cancel this quote?",
         "placeholders": {
           "reason": "Please enter reason here..."
         }
@@ -137,7 +137,7 @@
       "release-hold": "Reactivate",
       "place-on-hold": "Put on hold",
       "submit-proposal": "Submit proposal",
-      "cancel-document": "Remove document",
+      "cancel-document": "Cancel document",
       "add-selected": "Add selected",
       "add-item": "Add item"
     }
@@ -165,7 +165,7 @@
       },
       "EnableQuotes": {
         "title": "Enable quotes",
-        "description": "Tick the check box to activate quotes in the store"
+        "description": "Enable the switch to activate quotes in the store"
       }
     }
   },
