--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/ru.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/ru.VirtoCommerce.Quote.json
@@ -124,9 +124,13 @@
         }
 
       },
-      "proposal-delete": {
+      "proposal-submit": {
         "title": "Подтверждение предложения",
         "message": "После отправления предложения будут доступны лишь незначительные правки. Вы действительно хотите отправить это предложение покупателю?"
+      },
+      "proposal-submit-with-warning": {
+        "title": "Неполное предложение",
+        "message": "Предупреждение: Ваша квота будет отправлена ​​без каких-либо позиций или с нулевой общей суммой. Пожалуйста, убедитесь, что все позиции перечислены и оценены надлежащим образом, прежде чем продолжить. Вы уверены, что хотите продолжить?"
       },
       "hold-confirmation": {
         "title": "Ожидание подтверждения",
@@ -145,7 +149,7 @@
   },
   "module": {
     "VirtoCommerce.Quote": {
-      "description": "Экспорт/Импорт запросов котировок (RFQ)" 
+      "description": "Экспорт/Импорт запросов котировок (RFQ)"
     }
-  } 
+  }
 }
