VCST-18168: Add FileUploadScopeName public property.
feat: Add FileUploadScopeName Public property. It allows to specify the scope name for file upload configurations and policies. Default: quote-attachments

--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/en.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/en.VirtoCommerce.Quote.json
@@ -170,6 +170,10 @@
       "EnableQuotes": {
         "title": "Enable quotes",
         "description": "Enable the switch to activate quotes in the store"
+      },
+      "FileUploadScopeName": {
+        "title": "File upload scope name",
+        "description": "Specify the scope name for file upload configurations and policies. Default: quote-attachments"
       }
     }
   },
