--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/de.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/de.VirtoCommerce.Quote.json
@@ -1,11 +1,11 @@
 {
   "quotes": {
-    "main-menu-title": "Kostenvoranschläge",
+    "main-menu-title": "Angebote",
     "blades": {
       "quotes-assets": {
-        "subtitle": "Anhänge",
+        "subtitle": "Angebotsanhänge",
         "labels": {
-          "drag-note": "Anzuhängende Dateien hier hin ziehen",
+          "drag-note": "Ziehen Sie Ihre Dateien hierher",
           "select-files": "Dateien auswählen",
           "progress": "Fortschritt",
           "type": "Typ",
@@ -14,79 +14,79 @@
         }
       },
       "quote-detail": {
-        "subtitle": "Details zum Kostenvoranschlag",
+        "subtitle": "Angebotsdetails",
         "labels": {
           "customer": "Kunde",
           "created": "Erstellt",
-          "customer-organization": "Organisation",
-          "last-updated": "Letzte Aktualisierung",
+          "customer-organization": "Kundenunternehmen",
+          "last-updated": "Zuletzt aktualisiert",
           "status": "Status",
-          "expiry-date": "Verfalldatum",
-          "assigned-to": "Zugewiesen zu",
-          "rfq-from": "Angebotsanforderung von",
-          "reminder-date": "Mahndatum",
-          "general-comment": "Allgemeine Bemerkung",
-          "internal-comment": "Interne Bemerkung"
+          "expiry-date": "Ablaufdatum",
+          "assigned-to": "Zugewiesen an",
+          "rfq-from": "Anfrage von",
+          "reminder-date": "Erinnerungsdatum",
+          "general-comment": "Allgemeiner Kommentar",
+          "internal-comment": "Interner Kommentar"
         },
         "placeholders": {
-          "status": "Wählen Sie aus...",
+          "status": "Auswählen...",
           "expiry-date": "Datum auswählen",
-          "assigned-to": "Wählen Sie aus...",
-          "rfq-from": "Shop auswählen",
+          "assigned-to": "Auswählen...",
+          "rfq-from": "Shop auswählen...",
           "reminder-date": "Datum auswählen",
-          "general-comment": "Allgemeine Anmerkung",
-          "internal-comment": "Interne Bemerkung"
+          "general-comment": "Öffentlicher Kommentar",
+          "internal-comment": "Interner Kommentar"
         }
       },
       "quote-items": {
         "title": "{{title}} Positionen",
         "subtitle": "Positionen bearbeiten",
         "labels": {
-          "new-subtotal": "Neue Zwischensumme",
-          "relative-discount": "Rabatt",
-          "shipping-method": "Versandart",
-          "manual-shipping-total": "Manueller Versand gesamt",
-          "sub-total-placed": "Zwischensumme (gesetzt).",
-          "adjustment-quote": "Justierung",
+          "new-subtotal": "Neuer Zwischensumme",
+          "relative-discount": "Relativer Rabatt",
+          "shipping-method": "Versandmethode",
+          "manual-shipping-total": "Versandkosten gesamt (manuell)",
+          "sub-total-placed": "Zwischensumme (platziert)",
+          "adjustment-quote": "Anpassung",
           "sub-total": "Zwischensumme",
           "shipping": "Versand",
           "discount": "Rabatt",
           "grand-total": "Gesamtsumme",
           "taxes": "Steuern",
-          "grand-total-incl-tax": "Gesamtbetrag (Inkl. Steuern)",
+          "grand-total-incl-tax": "Gesamtsumme (inkl. Steuern)",
           "picture": "Bild",
-          "comment": "Kommentar mit Produkt",
+          "comment": "Produktkommentar",
           "list-price": "Listenpreis",
-          "sale-price": "Sonderangebot",
+          "sale-price": "Verkaufspreis",
           "quantity": "Menge",
           "proposed-price": "Vorgeschlagener Preis",
           "margin": "Marge (GP)",
           "product": "Produkt",
-          "sku": "Art.-Nr."
+          "sku": "Artikelnummer"
         },
         "placeholders": {
-          "shipping-method": "Wählen Sie aus...",
+          "shipping-method": "Auswählen...",
           "comment": "Kommentar eingeben"
         }
       },
       "quotes-list": {
-        "title": "Kostenvoranschläge",
+        "title": "Angebote",
         "labels": {
-          "quote-number": "Angebot Nr.",
+          "quote-number": "Angebotsnummer",
           "status": "Status",
-          "items-count": "Anzahl Artikel",
+          "items-count": "Artikelanzahl",
           "customer": "Kunde",
           "created": "Erstellt",
-          "no-quotes": "Keine Angebote noch"
+          "no-quotes": "Noch keine Angebote"
         }
       },
       "catalog-items-select": {
-        "title": "Artikel zum Angebot einfügen"
+        "title": "Artikel zum Angebot hinzufügen"
       }
     },
     "widgets": {
       "quote-address": {
-        "address-type": "Adresse eingeben",
+        "address-type": "Adresstyp",
         "no-address": "Keine Adresse",
         "blade-subtitle": "Adressen verwalten"
       },
@@ -94,7 +94,7 @@
         "title": "Anhänge"
       },
       "quote-items": {
-        "title": "Posten"
+        "title": "Positionen"
       },
       "quote-totals": {
         "sub-total": "Zwischensumme",
@@ -105,45 +105,87 @@
     },
     "dialogs": {
       "quote-requests-delete": {
-        "title": "Bestätigung löschen",
-        "message": "Sind Sie sicher, dass Sie ausgewählte Angebotanfragen löschen möchten?"
+        "title": "Löschen bestätigen",
+        "message": "Sind Sie sicher, dass Sie die ausgewählte(n) Angebotsanfrage(n) löschen möchten?"
       },
       "quote-delete": {
-        "title": "Bestätigung löschen",
-        "message": "Möchten Sie dieses Angebot wirklich löschen?"
+        "title": "Löschen bestätigen",
+        "message": "Sind Sie sicher, dass Sie dieses Angebot löschen möchten?"
       },
       "quote-save": {
         "title": "Änderungen speichern",
-        "message": "Der Kostenvoranschlag wurde geändert. Möchten Sie die Änderungen speichern?"
+        "message": "Das Angebot wurde geändert. Möchten Sie die Änderungen speichern?"
       },
       "quote-cancel": {
         "title": "Angebot stornieren",
-        "message": "Möchten Sie dieses Angebot wirklich abbrechen?",
+        "message": "Sind Sie sicher, dass Sie dieses Angebot stornieren möchten?",
         "placeholders": {
-          "reason": "Ein Grund, hier abzubrechen..."
+          "reason": "Grund hier eingeben..."
         }
       },
       "proposal-submit": {
-        "title": "Vorschlag bestätigen",
-        "message": "Nur begrenzte Änderungen sind verfügbar, nachdem der Antrag gesendet wurde. Sind Sie sicher, dass Sie diesen Vorschlag an den Kunden schicken möchten?"
+        "title": "Angebot bestätigen",
+        "message": "Sobald Sie Ihr Angebot eingereicht haben, werden bestimmte Teile Ihres Angebots gesperrt und können nicht mehr geändert werden. Sind Sie sicher, dass Sie fortfahren möchten?"
       },
       "proposal-submit-with-warning": {
-        "title": "Unvollständiger Angebotsvorschlag",
-        "message": "Achtung: Das Angebot enthält entweder keine Artikel oder hat einen Gesamtwert von Null. Bitte stellen Sie sicher, dass alle Artikel aufgelistet und mit den richtigen Preisen versehen sind, bevor Sie fortfahren. Möchten Sie wirklich fortfahren?"
+        "title": "Unvollständiges Angebotsvorschlag",
+        "message": "Warnung: Angebot fehlt oder Summe ist Null. Bitte stellen Sie sicher, dass alle Artikel korrekt aufgelistet und bepreist sind, bevor Sie fortfahren. Sind Sie sicher, dass Sie fortfahren möchten?"
       },
       "hold-confirmation": {
-        "title": "Warteschleifen Bestätigung",
-        "message-release": "Bist du sicher, dass die Pausierung aus diesem Angebot freigeben willst?",
-        "message-place": "Bist du sicher, dass die Pausierung aus diesem Angebot einsetzen willst?"
+        "title": "Anhalten bestätigen",
+        "message-release": "Sind Sie sicher, dass Sie dieses Angebot reaktivieren möchten?",
+        "message-place": "Sind Sie sicher, dass Sie dieses Angebot anhalten möchten?"
       }
     },
     "commands": {
-      "release-hold": "Pausierung aufheben",
-      "place-on-hold": "Pausieren",
-      "submit-proposal": "Vorschlag senden",
-      "cancel-document": "Beleg stornieren",
+      "release-hold": "Reaktivieren",
+      "place-on-hold": "Anhalten",
+      "submit-proposal": "Angebot einreichen",
+      "cancel-document": "Dokument stornieren",
       "add-selected": "Ausgewählte hinzufügen",
       "add-item": "Artikel hinzufügen"
+    }
+  },
+  "permissions": {
+    "quote:access": "Angebotsmenü öffnen",
+    "quote:create": "Angebot erstellen",
+    "quote:read": "Angebote anzeigen",
+    "quote:update": "Angebote aktualisieren",
+    "quote:delete": "Angebote löschen"
+  },
+  "settings": {
+    "Quotes": {
+      "Status": {
+        "title": "Angebotsstatus",
+        "description": "Liste der gültigen Angebotsstatus"
+      },
+      "DefaultStatus": {
+        "title": "Standard-Angebotsstatus",
+        "description": "Dieser Status wird dem Angebot zugewiesen, das aus dem Warenkorb erstellt wurde"
+      },
+      "QuoteRequestNewNumberTemplate": {
+        "title": "Vorlage für neue Angebotsanfragenummer",
+        "description": "Diese Vorlage oder dieses Muster wird verwendet, um Nummern für neue Angebotsanfragen zu generieren. 0 ist das Datum und die Uhrzeit (UTC), zu der die Nummer generiert wurde, während 1 die Sequenznummer ist"
+      },
+      "EnableQuotes": {
+        "title": "Angebote aktivieren",
+        "description": "Aktivieren Sie den Schalter, um Angebote im Shop zu aktivieren"
+      }
+    }
+  },
+  "file-upload-error": {
+    "status": "Fehler",
+    "status-text": "Datei-Upload fehlgeschlagen",
+    "invalid-configuration": "Datei-Upload-Bereich ist nicht konfiguriert",
+    "template": "{{fileName}}: {{errorMessage}}",
+    "duplicate-name": "Eine Datei mit demselben Namen existiert bereits",
+    "INVALID_SIZE": "Dateigröße überschreitet {{parameter}} Bytes",
+    "INVALID_EXTENSION": "Dateityp ist nicht einer der erlaubten Typen ({{parameter}})",
+    "UNKNOWN_ERROR": "Unbekannter Fehler: {{message}}"
+  },
+  "module": {
+    "VirtoCommerce.Quote": {
+      "description": "Angebotsanfragen (RFQs) exportieren oder importieren"
     }
   }
 }
