--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/en.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/en.VirtoCommerce.Quote.json
@@ -29,11 +29,11 @@
           "internal-comment": "Internal comment"
         },
         "placeholders": {
-          "status": "Please select...",
+          "status": "Select...",
           "expiry-date": "Select date",
-          "assigned-to": "Please select...",
-          "rfq-from": "Please select store...",
-          "reminder-date": "Please select date",
+          "assigned-to": "Select...",
+          "rfq-from": "Select store...",
+          "reminder-date": "Select date",
           "general-comment": "Public comment",
           "internal-comment": "Internal comment"
         }
@@ -51,9 +51,9 @@
           "sub-total": "Subtotal",
           "shipping": "Shipping",
           "discount": "Discount",
-          "grand-total": "Grand Total",
+          "grand-total": "Grand total",
           "taxes": "Taxes",
-          "grand-total-incl-tax": "Grand Total (Incl. Taxes)",
+          "grand-total-incl-tax": "Grand total (incl. taxes)",
           "picture": "Image",
           "comment": "Product comment",
           "list-price": "List price",
@@ -65,7 +65,7 @@
           "sku": "SKU"
         },
         "placeholders": {
-          "shipping-method": "Please select...",
+          "shipping-method": "Select...",
           "comment": "Enter comment"
         }
       },
@@ -100,16 +100,16 @@
         "sub-total": "Subtotal",
         "shipping": "Shipping",
         "discount": "Discount",
-        "grand-total": "Grand Total"
+        "grand-total": "Grand total"
       }
     },
     "dialogs": {
       "quote-requests-delete": {
-        "title": "Confirm Delete",
+        "title": "Confirm delete",
         "message": "Are you sure you want to delete the selected quote request(s)?"
       },
       "quote-delete": {
-        "title": "Confirm Delete",
+        "title": "Confirm delete",
         "message": "Are you sure you want to delete this quote?"
       },
       "quote-save": {
@@ -120,16 +120,16 @@
         "title": "Cancel quote",
         "message": "Are you sure you want to cancel this quote?",
         "placeholders": {
-          "reason": "Please enter reason here..."
+          "reason": "Enter reason here..."
         }
       },
       "proposal-submit": {
         "title": "Confirm proposal",
-        "message": "Once you submit your proposal, certain parts of your quote will be locked and cannot be modified. Are you sure you want to proceed?"
+        "message": "Once you have submitted your proposal, certain parts of your quote will be locked and cannot be modified. Are you sure you want to proceed?"
       },
       "proposal-submit-with-warning": {
         "title": "Incomplete quote proposal",
-        "message": "Warning: The quote doesn't have either any items or with a zero total. Please ensure that all items are listed and priced appropriately before proceeding. Are you sure you want to proceed?"
+        "message": "Warning: Offer is missing or totals zero. Please ensure that all items are listed and priced correctly before proceeding. Are you sure you want to proceed?"
       },
       "hold-confirmation": {
         "title": "Confirm put on hold",
@@ -165,7 +165,7 @@
       },
       "QuoteRequestNewNumberTemplate": {
         "title": "RFQ number template",
-        "description": "This template or pattern will be used to generate numbers for new quote requests. 0 means date and time (UTC) the number gets generated, while 1 stands for the sequence number."
+        "description": "This template or pattern will be used to generate numbers for new quote requests. 0 is the date and time (UTC) when the number was generated, while 1 is the sequence number"
       },
       "EnableQuotes": {
         "title": "Enable quotes",
