--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/it.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/it.VirtoCommerce.Quote.json
@@ -26,7 +26,8 @@
           "rfq-from": "RFQ da",
           "reminder-date": "Data promemoria",
           "general-comment": "Commento generale",
-          "internal-comment": "Commento interno"
+          "internal-comment": "Commento interno",
+          "not-defined": "Non definito"
         },
         "placeholders": {
           "status": "Seleziona...",
