--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/pl.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/pl.VirtoCommerce.Quote.json
@@ -26,7 +26,7 @@
           "rfq-from": "Zapytanie ofertowe od",
           "reminder-date": "Data przypomnienia",
           "general-comment": "Komentarz ogólny",
-          "internal-comment": "Komentarz wewnętrzny".
+          "internal-comment": "Komentarz wewnętrzny",
           "not-defined": "Nieokreślony"
         },
         "placeholders": {
