--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/ru.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/ru.VirtoCommerce.Quote.json
@@ -83,6 +83,44 @@
       },
       "catalog-items-select": {
         "title": "Добавить позицию в коммерческое предложение"
+      },
+      "address-details": {
+        "labels": {
+          "name": "Название адреса",
+          "address-type": "Тип адреса",
+          "first-name": "Имя",
+          "middle-name": "Отчество",
+          "last-name": "Фамилия",
+          "country": "Страна",
+          "region": "Регион",
+          "city": "Город",
+          "address1": "Адрес, строка 1",
+          "address2": "Адрес, строка 2",
+          "zip-code": "Почтовый индекс",
+          "email": "Электронная почта",
+          "phone": "Телефон",
+          "description": "Описание"
+        },
+        "placeholders": {
+          "address-type": "Выберите тип адреса...",
+          "first-name": "Введите имя...",
+          "middle-name": "Введите отчество...",
+          "last-name": "Введите фамилию...",
+          "country": "Выберите страну...",
+          "region": "Выберите регион...",
+          "city": "Введите город...",
+          "address1": "Введите адрес, строка 1...",
+          "address2": "Введите адрес, строка 2...",
+          "zip-code": "Введите почтовый индекс...",
+          "email": "Введите email...",
+          "phone": "Введите телефон...",
+          "description": "Введите описание..."
+        }
+      },
+      "address-list": {
+        "labels": {
+          "no-addresses": "Адреса еще не добавлены"
+        }
       }
     },
     "widgets": {
@@ -136,6 +174,14 @@
         "title": "Подтверждение приостановки",
         "message-release": "Вы уверены, что хотите возобновить это коммерческое предложение?",
         "message-place": "Вы уверены, что хотите приостановить это коммерческое предложение?"
+      },
+      "address-delete": {
+        "title": "Подтвердите удаление",
+        "message": "Вы уверены, что хотите удалить этот адрес?"
+      },
+      "address-save": {
+        "title": "Сохранить изменения",
+        "message": "Адрес был изменен. Хотите сохранить изменения?"
       }
     },
     "commands": {
