--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/it.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/it.VirtoCommerce.Quote.json
@@ -83,6 +83,44 @@
       },
       "catalog-items-select": {
         "title": "Aggiungi articolo al preventivo"
+      },
+      "address-details": {
+        "labels": {
+          "name": "Nome dell'indirizzo",
+          "address-type": "Tipo di indirizzo",
+          "first-name": "Nome",
+          "middle-name": "Secondo nome",
+          "last-name": "Cognome",
+          "country": "Paese",
+          "region": "Regione",
+          "city": "Città",
+          "address1": "Indirizzo riga 1",
+          "address2": "Indirizzo riga 2",
+          "zip-code": "CAP",
+          "email": "Email",
+          "phone": "Telefono",
+          "description": "Descrizione"
+        },
+        "placeholders": {
+          "address-type": "Seleziona tipo di indirizzo...",
+          "first-name": "Inserisci nome...",
+          "middle-name": "Inserisci secondo nome...",
+          "last-name": "Inserisci cognome...",
+          "country": "Seleziona paese...",
+          "region": "Seleziona regione...",
+          "city": "Inserisci città...",
+          "address1": "Inserisci indirizzo riga 1...",
+          "address2": "Inserisci indirizzo riga 2...",
+          "zip-code": "Inserisci CAP...",
+          "email": "Inserisci email...",
+          "phone": "Inserisci telefono...",
+          "description": "Inserisci descrizione..."
+        }
+      },
+      "address-list": {
+        "labels": {
+          "no-addresses": "Nessun indirizzo ancora"
+        }
       }
     },
     "widgets": {
@@ -136,6 +174,14 @@
         "title": "Conferma sospensione",
         "message-release": "Sei sicuro di voler riattivare questo preventivo?",
         "message-place": "Sei sicuro di voler sospendere questo preventivo?"
+      },
+      "address-delete": {
+        "title": "Conferma eliminazione",
+        "message": "Sei sicuro di voler eliminare questo indirizzo?"
+      },
+      "address-save": {
+        "title": "Salva modifiche",
+        "message": "L'indirizzo è stato modificato. Vuoi salvare le modifiche?"
       }
     },
     "commands": {
