--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/pl.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/pl.VirtoCommerce.Quote.json
@@ -83,6 +83,44 @@
       },
       "catalog-items-select": {
         "title": "Dodaj pozycję do oferty"
+      },
+      "address-details": {
+        "labels": {
+          "name": "Nazwa adresu",
+          "address-type": "Typ adresu",
+          "first-name": "Imię",
+          "middle-name": "Drugie imię",
+          "last-name": "Nazwisko",
+          "country": "Kraj",
+          "region": "Region",
+          "city": "Miasto",
+          "address1": "Adres - linia 1",
+          "address2": "Adres - linia 2",
+          "zip-code": "Kod pocztowy",
+          "email": "E-mail",
+          "phone": "Telefon",
+          "description": "Opis"
+        },
+        "placeholders": {
+          "address-type": "Wybierz typ adresu...",
+          "first-name": "Wpisz imię...",
+          "middle-name": "Wpisz drugie imię...",
+          "last-name": "Wpisz nazwisko...",
+          "country": "Wybierz kraj...",
+          "region": "Wybierz region...",
+          "city": "Wpisz miasto...",
+          "address1": "Wpisz adres - linia 1...",
+          "address2": "Wpisz adres - linia 2...",
+          "zip-code": "Wpisz kod pocztowy...",
+          "email": "Wpisz e-mail...",
+          "phone": "Wpisz telefon...",
+          "description": "Wpisz opis..."
+        }
+      },
+      "address-list": {
+        "labels": {
+          "no-addresses": "Brak adresów"
+        }
       }
     },
     "widgets": {
@@ -136,6 +174,14 @@
         "title": "Potwierdź wstrzymanie",
         "message-release": "Czy na pewno chcesz ponownie aktywować tę ofertę?",
         "message-place": "Czy na pewno chcesz wstrzymać tę ofertę?"
+      },
+      "address-delete": {
+        "title": "Potwierdź usunięcie",
+        "message": "Czy na pewno chcesz usunąć ten adres?"
+      },
+      "address-save": {
+        "title": "Zapisz zmiany",
+        "message": "Adres został zmodyfikowany. Czy chcesz zapisać zmiany?"
       }
     },
     "commands": {
