--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/pt.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/pt.VirtoCommerce.Quote.json
@@ -83,6 +83,44 @@
       },
       "catalog-items-select": {
         "title": "Adicionar item à cotação"
+      },
+      "address-details": {
+        "labels": {
+          "name": "Nome do endereço",
+          "address-type": "Tipo de endereço",
+          "first-name": "Nome",
+          "middle-name": "Nome do meio",
+          "last-name": "Sobrenome",
+          "country": "País",
+          "region": "Região",
+          "city": "Cidade",
+          "address1": "Endereço linha 1",
+          "address2": "Endereço linha 2",
+          "zip-code": "Código postal",
+          "email": "Email",
+          "phone": "Telefone",
+          "description": "Descrição"
+        },
+        "placeholders": {
+          "address-type": "Selecione o tipo de endereço...",
+          "first-name": "Digite o nome...",
+          "middle-name": "Digite o nome do meio...",
+          "last-name": "Digite o sobrenome...",
+          "country": "Selecione o país...",
+          "region": "Selecione a região...",
+          "city": "Digite a cidade...",
+          "address1": "Digite o endereço linha 1...",
+          "address2": "Digite o endereço linha 2...",
+          "zip-code": "Digite o código postal...",
+          "email": "Digite o email...",
+          "phone": "Digite o telefone...",
+          "description": "Digite a descrição..."
+        }
+      },
+      "address-list": {
+        "labels": {
+          "no-addresses": "Ainda não há endereços"
+        }
       }
     },
     "widgets": {
@@ -136,6 +174,14 @@
         "title": "Confirmar retenção",
         "message-release": "Tem certeza de que deseja reativar esta cotação?",
         "message-place": "Tem certeza de que deseja colocar esta cotação em espera?"
+      },
+      "address-delete": {
+        "title": "Confirmar exclusão",
+        "message": "Tem certeza de que deseja excluir este endereço?"
+      },
+      "address-save": {
+        "title": "Salvar alterações",
+        "message": "O endereço foi modificado. Deseja salvar as alterações?"
       }
     },
     "commands": {
