--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/en.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/en.VirtoCommerce.Quote.json
@@ -121,6 +121,38 @@
         "labels": {
           "no-addresses": "No addresses yet"
         }
+      },
+      "quote-item-configuration": {
+        "title": "Configuration",
+        "labels": {
+          "picture": "Image",
+          "quantity": "Quantity",
+          "text": "Text",
+          "product-name": "Product name",
+          "file-name": "File name",
+          "file-size": "File size",
+          "file-content-type": "File type"
+        },
+        "menu": {
+          "products": {
+            "title": "Configuration products",
+            "description": "Products that make up the configuration"
+          },
+          "texts": {
+            "title": "Configuration texts",
+            "description": "Various customized texts used to create a unique product configuration"
+          },
+          "files": {
+            "title": "Configuration files",
+            "description": "Various files used to create a unique product configuration"
+          }
+        },
+        "description": {
+          "no-configuration": "This product does not support configuration.",
+          "no-products": "This configuration does not have any products yet.",
+          "no-texts": "This configuration does not have any texts yet.",
+          "no-files": "This configuration does not have any files yet."
+        }
       }
     },
     "widgets": {
@@ -140,6 +172,9 @@
         "shipping": "Shipping",
         "discount": "Discount",
         "grand-total": "Grand total"
+      },
+      "configuration": {
+        "title": "Configuration"
       }
     },
     "dialogs": {
