--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/de.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/de.VirtoCommerce.Quote.json
@@ -121,6 +121,38 @@
         "labels": {
           "no-addresses": "Noch keine Adressen"
         }
+      },
+      "customerOrder-item-configuration": {
+        "title": "Konfiguration",
+        "labels": {
+          "picture": "Bild",
+          "quantity": "Menge",
+          "text": "Text",
+          "product-name": "Produktname",
+          "file-name": "Dateiname",
+          "file-size": "Dateigröße",
+          "file-content-type": "Dateityp"
+        },
+        "menu": {
+          "products": {
+            "title": "Konfigurationsprodukte",
+            "description": "Produkte, die die Konfiguration ausmachen"
+          },
+          "texts": {
+            "title": "Konfigurationstexte",
+            "description": "Verschiedene individuell angepasste Texte zur Erstellung einer einzigartigen Produktkonfiguration"
+          },
+          "files": {
+            "title": "Konfigurationsdateien",
+            "description": "Verschiedene Dateien, die zur Erstellung einer eindeutigen Produktkonfiguration verwendet werden"
+          }
+        },
+        "description": {
+          "no-configuration": "Dieses Produkt unterstützt keine Konfiguration.",
+          "no-products": "Dieses Konfiguration enthält noch keine Produkte.",
+          "no-texts": "Dieses Konfiguration enthält noch keine Texte.",
+          "no-files": "Diese Konfiguration hat noch keine Dateien."
+        }
       }
     },
     "widgets": {
@@ -140,6 +172,9 @@
         "shipping": "Versand",
         "discount": "Rabatt",
         "grand-total": "Gesamtsumme"
+      },
+      "configuration": {
+        "title": "Konfiguration"
       }
     },
     "dialogs": {
