--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/pl.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/pl.VirtoCommerce.Quote.json
@@ -121,6 +121,38 @@
         "labels": {
           "no-addresses": "Brak adresów"
         }
+      },
+      "customerOrder-item-configuration": {
+        "title": "Konfiguracja",
+        "labels": {
+          "picture": "Obraz",
+          "quantity": "Ilość",
+          "text": "Tekst",
+          "product-name": "Nazwa produktu",
+          "file-name": "Nazwa pliku",
+          "file-size": "Rozmiar pliku",
+          "file-content-type": "Typ pliku"
+        },
+        "menu": {
+          "products": {
+            "title": "Produkty konfiguracyjne",
+            "description": "Produkty, które składają się na konfigurację"
+          },
+          "texts": {
+            "title": "Teksty konfiguracyjne",
+            "description": "Różne spersonalizowane teksty używane do tworzenia unikalnej konfiguracji produktu"
+          },
+          "files": {
+            "title": "Pliki konfiguracyjne",
+            "description": "Różne pliki używane do stworzenia unikalnej konfiguracji produktu"
+          }
+        },
+        "description": {
+          "no-configuration": "Ten produkt nie obsługuje konfiguracji.",
+          "no-products": "Ten konfiguracji nie zawiera jeszcze żadnych produktów.",
+          "no-texts": "Ten konfiguracji nie zawiera jeszcze żadnych tekstów.",
+          "no-files": "Ta konfiguracja nie zawiera jeszcze żadnych plików."
+        }
       }
     },
     "widgets": {
@@ -140,6 +172,9 @@
         "shipping": "Wysyłka",
         "discount": "Rabat",
         "grand-total": "Suma całkowita"
+      },
+      "configuration": {
+        "title": "Konfiguracja"
       }
     },
     "dialogs": {
