--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/ru.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/ru.VirtoCommerce.Quote.json
@@ -121,6 +121,38 @@
         "labels": {
           "no-addresses": "Адреса еще не добавлены"
         }
+      },
+      "customerOrder-item-configuration": {
+        "title": "Конфигурация",
+        "labels": {
+          "picture": "Изображение",
+          "quantity": "Количество",
+          "text": "Текст",
+          "product-name": "Название продукта",
+          "file-name": "Имя файла",
+          "file-size": "Размер файла",
+          "file-content-type": "Тип файла"
+        },
+        "menu": {
+          "products": {
+            "title": "Продукты конфигурации",
+            "description": "Продукты, составляющие конфигурацию"
+          },
+          "texts": {
+            "title": "Тексты конфигурации",
+            "description": "Различные индивидуальные тексты, используемые для создания уникальной конфигурации продукта"
+          },
+          "files": {
+            "title": "Файлы конфигурации",
+            "description": "Различные файлы, используемые для создания уникальной конфигурации продукта"
+          }
+        },
+        "description": {
+          "no-configuration": "Этот продукт не поддерживает конфигурацию.",
+          "no-products": "Эта конфигурация ещё не имеет продуктов.",
+          "no-texts": "Эта конфигурация ещё не имеет текстов.",
+          "no-files": "В этой конфигурации пока нет файлов."
+        }
       }
     },
     "widgets": {
@@ -140,6 +172,9 @@
         "shipping": "Доставка",
         "discount": "Скидка",
         "grand-total": "Общий итог"
+      },
+      "configuration": {
+        "title": "Конфигурация"
       }
     },
     "dialogs": {
