--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/it.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/it.VirtoCommerce.Quote.json
@@ -121,6 +121,38 @@
         "labels": {
           "no-addresses": "Nessun indirizzo ancora"
         }
+      },
+      "quote-item-configuration": {
+        "title": "Configurazione",
+        "labels": {
+          "picture": "Immagine",
+          "quantity": "Quantità",
+          "text": "Testo",
+          "product-name": "Nome del prodotto",
+          "file-name": "Nome file",
+          "file-size": "Dimensione file",
+          "file-content-type": "Tipo di file"
+        },
+        "menu": {
+          "products": {
+            "title": "Prodotti di configurazione",
+            "description": "Prodotti che compongono la configurazione"
+          },
+          "texts": {
+            "title": "Testi di configurazione",
+            "description": "Vari testi personalizzati utilizzati per creare una configurazione di prodotto unica"
+          },
+          "files": {
+            "title": "File di configurazione",
+            "description": "Vari file utilizzati per creare una configurazione di prodotto unica"
+          }
+        },
+        "description": {
+          "no-configuration": "Questo prodotto non supporta la configurazione.",
+          "no-products": "Questo configurazione non ha ancora prodotti.",
+          "no-texts": "Questo configurazione non ha ancora testi.",
+          "no-files": "Questa configurazione non ha ancora file."
+        }
       }
     },
     "widgets": {
@@ -140,6 +172,9 @@
         "shipping": "Spedizione",
         "discount": "Sconto",
         "grand-total": "Totale generale"
+      },
+      "configuration": {
+        "title": "Configurazione"
       }
     },
     "dialogs": {
