--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/es.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/es.VirtoCommerce.Quote.json
@@ -121,6 +121,38 @@
         "labels": {
           "no-addresses": "Aún no hay direcciones"
         }
+      },
+      "quote-item-configuration": {
+        "title": "Configuración",
+        "labels": {
+          "picture": "Imagen",
+          "quantity": "Cantidad",
+          "text": "Texto",
+          "product-name": "Nombre del producto",
+          "file-name": "Nombre del archivo",
+          "file-size": "Tamaño del archivo",
+          "file-content-type": "Tipo de archivo"
+        },
+        "menu": {
+          "products": {
+            "title": "Productos de configuración",
+            "description": "Productos que forman parte de la configuración"
+          },
+          "texts": {
+            "title": "Textos de configuración",
+            "description": "Varios textos personalizados utilizados para crear una configuración de producto única"
+          },
+          "files": {
+            "title": "Archivos de configuración",
+            "description": "Varios archivos utilizados para crear una configuración de producto única"
+          }
+        },
+        "description": {
+          "no-configuration": "Este producto no admite configuración.",
+          "no-products": "Este configuración aún no tiene productos.",
+          "no-texts": "Este configuración aún no tiene textos.",
+          "no-files": "Esta configuración aún no tiene archivos."
+        }
       }
     },
     "widgets": {
@@ -140,6 +172,9 @@
         "shipping": "Envío",
         "discount": "Descuento",
         "grand-total": "Total general"
+      },
+      "configuration": {
+        "title": "Configuración"
       }
     },
     "dialogs": {
