--- a/src/VirtoCommerce.QuoteModule.Web/Localizations/pt.VirtoCommerce.Quote.json
+++ b/src/VirtoCommerce.QuoteModule.Web/Localizations/pt.VirtoCommerce.Quote.json
@@ -121,6 +121,38 @@
         "labels": {
           "no-addresses": "Ainda não há endereços"
         }
+      },
+      "quote-item-configuration": {
+        "title": "Configuração",
+        "labels": {
+          "picture": "Imagem",
+          "quantity": "Quantidade",
+          "text": "Texto",
+          "product-name": "Nome do produto",
+          "file-name": "Nome do arquivo",
+          "file-size": "Tamanho do arquivo",
+          "file-content-type": "Tipo de arquivo"
+        },
+        "menu": {
+          "products": {
+            "title": "Produtos de configuração",
+            "description": "Produtos que compõem a configuração"
+          },
+          "texts": {
+            "title": "Textos de configuração",
+            "description": "Vários textos personalizados usados para criar uma configuração de produto única"
+          },
+          "files": {
+            "title": "Ficheiros de configuração",
+            "description": "Vários arquivos usados para criar uma configuração de produto única"
+          }
+        },
+        "description": {
+          "no-configuration": "Este produto não suporta configuração.",
+          "no-products": "Este configuração ainda não possui produtos.",
+          "no-texts": "Este configuração ainda não possui textos.",
+          "no-files": "Esta configuração ainda não tem nenhum ficheiro."
+        }
       }
     },
     "widgets": {
@@ -140,6 +172,9 @@
         "shipping": "Envio",
         "discount": "Desconto",
         "grand-total": "Total geral"
+      },
+      "configuration": {
+        "title": "Configuração"
       }
     },
     "dialogs": {
